message overlap fixes

--- a/views/style/message.css
+++ b/views/style/message.css
@@ -1,14 +1,24 @@
 /*Base styles*/
-.composeMsg, .home-ul, .RightBox, .LeftBox {
-  width: 100%;
-  max-width: 600px;
-  margin: auto;
-  box-shadow: rgb(0, 0, 0) 0px 0px 10px 0px;
+.msgimg {
+  width: 15%;
+  height: auto; 
+  position: absolute; 
+  left: 10px; 
+  top: 50%;
+  transform: translateY(-50%); 
 }
 
-.msgli, .Sender, .Subject {
-  width: 90%;
-  margin: 10px auto;
+.Sender, .Subject {
+  margin-left: 25%;
+  width: 70%; 
+  display: block; 
+  margin-bottom: 10px; 
+}
+
+.msgli {
+  position: relative; 
+  padding: 10px;
+  min-height: 80px; 
 }
 
 /*Media Queries */
